--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.github.satyan:sugar:1.4'
     testCompile 'junit:junit:4.12'
 }
