--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,8 +5,9 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application
-        android:name="android.support.multidex.MultiDexApplication"
+    <application>
+        <!--android:name="android.support.multidex.MultiDexApplication"-->
+        android:name="com.example.root.mickle.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
